Add pose detection functionality and improve gamepad handling
- Updated `tino_robot.launch.py` to include pose detection launch file.
- Modified `package.xml` to add dependencies for pose detection and related libraries.
- Added `yolo11n-pose.engine` model file for pose detection.
- Enhanced `setup.py` to include resource files and new pose detection node.
- Created `export_model.py` to export YOLO model to TensorRT format.
- Improved `gamepad_node.py` to support Logitech gamepad detection and added input normalization.
- Implemented `pose_detection_node.py` for real-time pose detection using YOLO and depth information.
- Updated `robot_controller_node.py` to subscribe to human position data and forward it to VR interface.
- Enhanced `vr_interface_node.py` to handle human position data from pose detection.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # ROS 2 workspace artifacts
-tino_ws/build/
-tino_ws/install/
-tino_ws/log/
+tino_ws/build/**
+tino_ws/install/**
+tino_ws/log/**
+build/
+install/
+log/
 
 # Python cache
 **/__pycache__/
