Refactor serial communication and motor control for new base implementation; update port configurations, add debugging logs, and enhance command handling.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "ros.distro": "jazzy"
+    "arduino.path": "~/bin",
+    "arduino.commandPath": "arduino-cli",
+    "arduino.useArduinoCli": true,
+    "arduino.defaultBaudRate": 9600,
+    "arduino.logLevel": "info",
+    "arduino.enableUSBDetection": true,
+    "C_Cpp.errorSquiggles": "disabled"
 }
