--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,9 @@
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
         "*.css": "tailwindcss",
-        "cstring": "cpp"
+        "cstring": "cpp",
+        "cmath": "cpp",
+        "chrono": "cpp",
+        "complex": "cpp"
     }
 }
