--- a/tino_ws/src/uwb_positioning/package.xml
+++ b/tino_ws/src/uwb_positioning/package.xml
@@ -1,4 +1,6 @@
-<!-- """
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<!-- 
 ===================================================================
 |                                                                 |
 |  COPYRIGHT NOTICE                                               |
@@ -17,11 +19,9 @@
 |  © [2024] Farhad Shamsfakhr, PhD. All rights reserved.          |
 |                                                                 |
 ===================================================================
-""" -->
-<?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+-->
 <package format="3">
-  <name>uwb_positioning</name>
+    <name>uwb_positioning</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="fshamsfakhr@gmail.com">Farhad Shamsfakhr</maintainer>
@@ -34,25 +34,11 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>control_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>rclcpp</build_depend>
-  <build_depend>rclcpp_action</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  
   <exec_depend>python3-numpy</exec_depend>
-  <exec_depend>tf2_ros_py</exec_depend>
-  <exec_depend>ament_index_python</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>hardware_interface</exec_depend>
-  <exec_depend>launch</exec_depend>
-  <exec_depend>launch_ros</exec_depend>
-  <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>xacro</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
