Final system after experiments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
         "cmath": "cpp",
         "chrono": "cpp",
         "complex": "cpp"
-    }
+    },
+    "cmake.ignoreCMakeListsMissing": true
 }
